--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@expo-google-fonts/archivo": "^0.2.3",
     "@expo-google-fonts/inter": "^0.2.3",
+    "@react-native-community/datetimepicker": "6.7.3",
     "@types/styled-components-react-native": "^5.2.1",
     "expo": "~48.0.11",
     "expo-calendar": "~11.1.1",
