--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "expo-calendar": "~11.1.1",
     "expo-font": "~11.1.1",
     "expo-status-bar": "~1.4.4",
+    "moment": "^2.29.4",
     "react": "18.2.0",
     "react-native": "0.71.6",
     "react-native-gesture-handler": "~2.9.0",
