--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "expo": "~48.0.11",
     "expo-calendar": "~11.1.1",
     "expo-font": "~11.1.1",
+    "expo-notifications": "~0.18.1",
     "expo-status-bar": "~1.4.4",
     "moment": "^2.29.4",
     "react": "18.2.0",
