--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "worked-hours",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -13,18 +12,19 @@
     "@expo-google-fonts/inter": "^0.2.3",
     "@react-native-community/datetimepicker": "6.7.3",
     "@types/styled-components-react-native": "^5.2.1",
-    "expo": "~48.0.11",
+    "expo": "~48.0.15",
     "expo-calendar": "~11.1.1",
     "expo-font": "~11.1.1",
     "expo-notifications": "~0.18.1",
     "expo-status-bar": "~1.4.4",
     "moment": "^2.29.4",
     "react": "18.2.0",
-    "react-native": "0.71.6",
+    "react-native": "0.71.7",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-iphone-x-helper": "^1.3.1",
     "react-native-responsive-fontsize": "^0.5.1",
-    "styled-components": "^5.3.9"
+    "styled-components": "^5.3.9",
+    "expo-splash-screen": "~0.18.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
